tests/baselines/reference/emptyThenWarning.errors.txt
emptyThenWarning.ts(1,6): error TS1313: The body of an 'if' statement cannot be the empty statement.
emptyThenWarning.ts(4,5): error TS2845: This condition will always return 'true'.
emptyThenWarning.ts(4,19): error TS1313: The body of an 'if' statement cannot be the empty statement.


==== emptyThenWarning.ts (3 errors) ====
    if(1);
         ~
!!! error TS1313: The body of an 'if' statement cannot be the empty statement.
    
    let x = 0;
    if (true === true); {  
        ~~~~~~~~~~~~~
!!! error TS2845: This condition will always return 'true'.
                      ~
!!! error TS1313: The body of an 'if' statement cannot be the empty statement.
        x = 1;
    }